--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>vik24rus</groupId>
     <artifactId>testSqliteApp</artifactId>
     <version>1.0</version>
+    <dependencies>
+        <dependency>
+        <groupId>org.xerial</groupId>
+        <artifactId>sqlite-jdbc</artifactId>
+        <version>3.21.0.1</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
